Bug #18863 NDB node fails to restart, cluster stuck in state trying to restart it. - remove some event code to get rid of some bugs